test/corpus/setlocal.txt
================
SETLOCAL simple
================

setlocal

---

(program
  (setlocal_stmt))

================
SETLOCAL EnableDelayedExpansion
================

setlocal enabledelayedexpansion

---

(program
  (setlocal_stmt))

================
ENDLOCAL
================

endlocal

---

(program
  (endlocal_stmt))
