test/corpus/varname_special.txt
================
Variable name starting with plus sign
================

echo %+INDENT%

---

(program
  (cmd
    (command_name)
    (argument_list
      (variable_reference))))

================
Variable name starting with minus sign
================

echo %-INDENT%

---

(program
  (cmd
    (command_name)
    (argument_list
      (variable_reference))))
